# CMakeTemplate

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  SomeHeaderOnlyLibrary.h
test/: CMakeLists.txt  MockWriteClass.h  basic_tests.cpp  main.cpp
